# main_demo_cmake

./: .gitignore  .gitignore~  2013_08_27_79634__trained_model.proto.bin.bootstrap2  CMakeLists.txt  Makefile  Project.cbp  cascade.xml  cmake_install.cmake  main_demo.cbp  widget_demo.ui  yl.config.ini  yl.config.ini~
src/: CMakeLists.txt  main.cpp  widget_demo.cpp  widget_demo.h  widget_demo.ui
src/cuda_code/: CMakeLists.txt
src/ex_code/: .hg_archival.txt  CMakeLists.txt  common_settings.cmake
src/ex_code/libs/liblinear-1.8/: LibLinear.cbp  Makefile  cmake_install.cmake
src/ex_code/src/applications/: BaseApplication.cpp  BaseApplication.hpp  BaseSdlGui.cpp
src/ex_code/src/applications/boosted_learning/: 2013_08_13_67753__trained_model.proto.bin.bootstrap2.bootstrap0  2013_08_13_67753__trained_model.proto.bin.bootstrap2.bootstrap0.tmp  2013_08_13_67753__trained_model.proto.bin.bootstrap2.bootstrap1  2013_08_13_67753__trained_model.proto.bin.bootstrap2.bootstrap1.tmp  2013_08_13_68155__trained_model.proto.bin.bootstrap2.bootstrap0  2013_08_13_68155__trained_model.proto.bin.bootstrap2.bootstrap0.tmp  2013_08_13_68155__trained_model.proto.bin.bootstrap2.bootstrap1  2013_08_13_68155__trained_model.proto.bin.bootstrap2.bootstrap1.tmp  2013_08_13_68155__trained_model.proto.bin.bootstrap2.bootstrap2  2013_08_13_68155__trained_model.proto.bin.bootstrap2.bootstrap2.tmp  AdaboostLearner.cpp  BoostedLearning.cbp  Makefile  TrainingData.cpp  boosted_learning  boosted_learning.config.ini  boosted_learning.config.ini~  boosted_learning.cpp  cmake_install.cmake  integral_channels_helpers.cpp  trainfull.txt
src/ex_code/src/applications/bootstrapping_lib/: BootstrappingLib.cbp  Makefile  cmake_install.cmake
src/ex_code/src/applications/ground_estimation/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  stixel_world.out.txt
src/ex_code/src/applications/objects_detection/: CMakeLists.txt  Makefile  ObjectsDetectionApplication.cpp  cmake_install.cmake  very_fast_over_bahnhof_cvpr2012.config.ini  yl.config.ini~
src/ex_code/src/applications/objects_detection/2013_08_05_67359_recordings/: detections.data_sequence  program_options.txt
src/ex_code/src/applications/objects_detection_lib/: Makefile  cmake_install.cmake  objects_detection_lib.cpp  objects_detection_lib.hpp
src/ex_code/src/applications/stixel_world/: Makefile  cmake_install.cmake
src/ex_code/src/objects_detection/: AbstractObjectsDetector.hpp  BaseObjectsDetectorWithNonMaximalSuppression.cpp  GpuFastestPedestrianDetectorInTheWest.cpp  GpuFastestPedestrianDetectorInTheWest.hpp  GpuIntegralChannelsDetector.cpp  GpuIntegralChannelsDetector.hpp  GpuVeryFastIntegralChannelsDetector.cpp  GpuVeryFastIntegralChannelsDetector.hpp  IntegralChannelsDetector.hpp  ObjectsDetectorFactory.cpp  SoftCascadeOverIntegralChannelsFastStage.hpp  detector_model.proto  detector_model.proto~
src/ex_code/src/objects_detection/gpu/: get_feature_value_tex2d.cu.hpp  integral_channels_detector.cu
src/ex_code/src/objects_detection/integral_channels/: IntegralChannelsForPedestrians.cpp
src/ex_code/src/objects_detection_app/: ObjectsDetection.cbp  ObjectsDetectionApplication.cpp  ObjectsDetectionApplication.hpp  chnftrs_over_bahnhof.config.ini  very_fast_over_bahnhof_cvpr2012.config.ini~  yl.config.ini
src/ex_code/src/objects_detection_app/2013_08_04_76186_recordings/: detections.data_sequence
src/ex_code/src/objects_detection_app/2013_08_05_58921_recordings/: program_options.txt
src/object_detector/: CMakeLists.txt  traffic_sign_detector.cpp  traffic_sign_detector.h
src/ui/: CMakeLists.txt  Makefile  cmake_install.cmake
